# app/models/user.js
@@ -1,7 +1,7 @@
-const mongoose = require('mongoose');
-const utilities = require('../utilities/helper.js');
-const { logger } = require('../../logger/logger');
-const Otp = require('./otp.js');
+const mongoose = require("mongoose");
+const encryption = require("../utilities/helper.js");
+const Otp = require("./otp.js");
+const { logger } = require("../../logger/logger");
 
 const userSchema = mongoose.Schema({
   firstName: {
@@ -20,125 +20,92 @@ const userSchema = mongoose.Schema({
   password: {
     type: String,
     required: true
+  },
+  login: { type: Boolean },
+  verified: {
+    type: Boolean,
+    default: false
   }
 },
-  {
-    timestamps: true
-  });
+{
+  timestamps: false
+});
 
-const User = mongoose.model('User', userSchema);
+const User = mongoose.model("UserInformation", userSchema);
 
-class userModel {
-
-  /**
-    * @description register User in the database
-    * @param User
-    * @param callback
-    */
+class UserModel {
   registerUser = (userDetails, callback) => {
-    const newUser = new User({
-      firstName: userDetails.firstName,
-      lastName: userDetails.lastName,
-      email: userDetails.email,
-      password: userDetails.password
-    });
-    try {
-      utilities.hashing(userDetails.password, (error, hash) => {
-        if (hash) {
-          newUser.password = hash;
-          newUser.save((error, data) => {
-            if (error) {
-              logger.error(error);
-              callback(error, null);
-            } else {
-              logger.info(data);
-              callback(null, data);
-            }
-          });
-        } else {
-          throw error;
-        }
-      });
-    }
-    catch (error) {
-      logger.error(error);
-      return callback('Internal Error', null)
-    }
-  }
+    const newUser = new User();
+    newUser.firstName = userDetails.firstName;
+    newUser.lastName = userDetails.lastName;
+    newUser.email = userDetails.email;
+    newUser.password = userDetails.password;
 
-  /**
-    * @description login User from the database
-    * @param loginInfo
-    * @param callback for service
-    */
-  loginUser = (loginData, callBack) => {
-    //To find a user email in the database
-    User.findOne({ email: loginData.email }, (error, data) => {
+    const password = encryption.hashedPassword(userDetails.password);
+    newUser.password = password;
+
+    newUser.save((error, data) => {
       if (error) {
-        logger.error('Find error while loggin user');
-        return callBack(error, null);
-      } else if (!data) {
-        logger.error('Invalid User');
-        return callBack("Invalid Credential", null);
+        logger.error(error);
+        callback(error, null);
       } else {
-        logger.info('Email id found');
-        return callBack(null, data);
+        logger.info("success fully registered");
+        callback(null, data);
       }
     });
   }
 
-  /**
-    * @description mongoose function for forgot password
-    * @param {*} email
-    * @param {*} callback
-    */
+  loginModel = (loginData, callBack) => {
+    // To find a user email in the database
+    User.findOne({ email: loginData.email }, (error, data) => {
+      if (error) {
+        logger.error("Find error while loggin user");
+        return callBack(error, null);
+      } else if (data.verified == false) {
+        logger.error("Invalid User");
+        console.log(data);
+        return callBack("Invalid Credential / invalid user", null);
+      } else {
+        if (data.verified == true) {
+          logger.info("data found in database");
+          return callBack(null, data);
+        } else {
+          return callBack(error, null);
+        }
+      }
+    });
+  }
+
   forgotPassword = (data, callback) => {
     User.findOne({ email: data.email }, (err, data) => {
-      if (data) {
-        return callback(null, data);
-      } else {
-        logger.error('User with email id does not  exists');
+      if (err) {
+        logger.error(err);
         return callback(err, null);
+      } else if (!data) {
+        logger.error("Invalid Credential");
+        return callback("Invalid Credential", null);
+      } else {
+        logger.info(data);
+        return callback(null, data);
       }
     });
   };
 
-  /**
-    * @description mongooose method for reseting the password
-    * @param {*} userData
-    * @param {*} callback
-    * @returns
-    */
-  resetPassword = (userData, callback) => {
-    Otp.findOne({ code: userData.code }, (error, data) => {
-      if (data) {
-        if (userData.code == data.code) {
-          utilities.hashing(userData.password, (err, hash) => {
-            if (hash) {
-              userData.password = hash;
-              User.updateOne({ email: userData.email }, { '$set': { "password": userData.password } }, (error, data) => {
-                if (data) {
-                  return callback(null, data)
-                }
-                else {
-                  return callback("Error in updating", null)
-                }
-              })
-            } else {
-              return callback("Error in hash on password", null)
-            }
-          })
-        } else {
-          return callback("User not found", null)
-        }
-      } else {
-        return callback("Otp doesnt match", null)
+  resetpassword = async (Data) => {
+    const codepresent = await Otp.findOne({ email: Data.email, code: Data.code });
+    if (codepresent) {
+      const hash = encryption.hashedPassword(Data.password);
+      const success = await User.findOneAndUpdate({ email: Data.email }, { $set: { password: hash } });
+      if (success) {
+        return success;
       }
-    })
+      return false;
+    }
+    return false;
   }
 
-  confirmRegister = (data, callback) => {
-    user.findOneAndUpdate({ email: data.email }, { verified: true }, (error, data) => {
+  verifyUser = (data, callback) => {
+    User.findOneAndUpdate({ email: data.email }, { verified: true }, (error, data) => {
       if (error) {
         logger.error("data not found in database");
         return callback(error, null);
@@ -150,4 +117,4 @@ class userModel {
     );
   };
 }
-module.exports = new userModel();
+module.exports = new UserModel();
